# ChangeLog for x11-terms/gnome-terminal
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-terms/gnome-terminal/ChangeLog,v 1.196 2009/05/04 23:07:23 eva Exp $

*gnome-terminal-2.26.1 (04 May 2009)

  04 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
  -files/gnome-terminal-2.22.3-tab-close-fix.patch,
  -files/gnome-terminal-2-default_shell.patch,
  -files/gnome-terminal-2-dnd_url_add_space.patch,
  -gnome-terminal-2.18.2.ebuild, -gnome-terminal-2.22.3-r1.ebuild,
  +gnome-terminal-2.26.1.ebuild:
  New version for GNOME 2.26. Dropped libbonobo, libgnome and libgnomeui
  dependencies, lots of bug fixes. Clean up old revisions.

  28 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  gnome-terminal-2.24.2-r1.ebuild:
  sh stable

  27 Apr 2009; Jeroen Roovers <jer@gentoo.org> gnome-terminal-2.24.2-r1:
  Stable for HPPA (bug #260063).

  27 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  gnome-terminal-2.24.2-r1.ebuild:
  arm stable

  12 Apr 2009; Friedrich Oslage <bluebird@gentoo.org>
  gnome-terminal-2.24.2-r1.ebuild:
  Stable on sparc, bug #260063

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org>
  gnome-terminal-2.24.2-r1.ebuild:
  alpha/ia64 stable wrt #260063

  15 Mar 2009; Markus Meier <maekke@gentoo.org>
  gnome-terminal-2.24.2-r1.ebuild:
  x86 stable, bug #260063

  11 Mar 2009; Daniel Gryniewicz <dang@gentoo.org>
  gnome-terminal-2.24.2-r1.ebuild:
  Marked stable on amd64

  06 Mar 2009; Brent Baude <ranger@gentoo.org>
  gnome-terminal-2.24.2-r1.ebuild:
  Marking gnome-terminal-2.24.2-r1 ppc stable for bug 260063

  05 Mar 2009; Brent Baude <ranger@gentoo.org>
  gnome-terminal-2.24.2-r1.ebuild:
  Marking gnome-terminal-2.24.2-r1 ppc64 stable for bug 260063

  06 Jan 2009; Mart Raudsepp <leio@gentoo.org>
  -files/gnome-terminal-2.22.0-fix-detach-tab.patch,
  gnome-terminal-2.18.2.ebuild, -gnome-terminal-2.18.4.ebuild,
  -gnome-terminal-2.22.3.ebuild, -gnome-terminal-2.24.1.ebuild:
  Remove old
