@@ -4,7 +4,9 @@ AUX gnome-terminal-2.24.2-restore-switch-to-tab.patch 15041 RMD160 5860f46b1379d
 DIST gnome-terminal-2.24.2-restore-switch-to-tab-i18n.patch.bz2 30429 RMD160 ebed0cc9f9519586495a1bb44fd7dd6b9a0c76a3 SHA1 72ce23ede1e27661aab0762ab2e77fa69dfcbcbc SHA256 106a5eb8de80ebc4a398e4b5964e1de2df33263b92f0cdc579fde2a078af4972
 DIST gnome-terminal-2.24.2.tar.bz2 1854226 RMD160 c496f736b012b3324e8168a7fa5356ca6223ef8d SHA1 f6900ee932fd7c3b86a11a598a0a7381fd2fd839 SHA256 849597d79f2dd6eb8d4079bc0b59c0f806a691ac2af360099ef0fa1f6b91e82a
 DIST gnome-terminal-2.26.1.tar.bz2 2027751 RMD160 693c5ad11da3e68f4cfff198ef59fd13b25a39e1 SHA1 6cb6ce4916ccf7cb7be0467944665a79c38fd7c4 SHA256 e102f4a602699851dd37d7d58fea698a024cf1d680262ab3f0df612a809a3971
+DIST gnome-terminal-2.26.2.tar.bz2 2180133 RMD160 d6166db97d2a3656f3797babc52623badf396d41 SHA1 b5a59076dac54845e26296d42951591b23c1ee2d SHA256 f937939eca0082dc7f3f9ddab72d612433ad948aac7e158ed75f5d7053e8d0e0
 EBUILD gnome-terminal-2.24.2-r1.ebuild 1520 RMD160 98efa143fdf596a497cb6f5baa2c6e755ec22a3d SHA1 e5f86231ae776ca6163cd310e215a103d995b1dc SHA256 9570df17371c6306fbb83ea7b7890dd772092d77f5e6f7a3f24d19dae415b952
 EBUILD gnome-terminal-2.26.1.ebuild 1211 RMD160 275e07f00b3697c1670bcc906e1d63ebdc8de24a SHA1 1d4ee044f00a215887cfc274c25642ed2321f2a8 SHA256 e823d099592fca876d8717c1423aae65a3a5bec4d49e9295b83d10a3db5cfd02
-MISC ChangeLog 26703 RMD160 8919d4c0e5ac35b94df5dc51a0a11f9aefa8106f SHA1 a62318e3a388deac4159908c2fdfaa72b288b363 SHA256 7b4b70727b0bd44310bdb89c77e8153eebea96544c4e4c7fa374d69ee540058e
+EBUILD gnome-terminal-2.26.2.ebuild 1211 RMD160 e5a42dd7bc387c7568d851a00380b341b44e85b0 SHA1 2d5cb49aee1d69942adacc494727cb7061e1c208 SHA256 0ac9d218ff5b542c90d17dae66205234532c1d6e3b3373209ed05905b91a95fc
+MISC ChangeLog 26868 RMD160 15d643d1805ae3226b282631d3693c37ec0af17d SHA1 4f8638c9a13e915c045db1be71c8e18e66b51c7e SHA256 0c1fe35d1e40f25fcc0ce4c4347794ca520ee7f02b081d9a4baedc4b0896f0aa
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
