@@ -1,6 +1,12 @@
 # ChangeLog for x11-terms/gnome-terminal
-# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-terms/gnome-terminal/ChangeLog,v 1.196 2009/05/04 23:07:23 eva Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-terms/gnome-terminal/ChangeLog,v 1.197 2009/05/18 20:50:17 eva Exp $
+
+*gnome-terminal-2.26.2 (18 May 2009)
+
+  18 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
+  +gnome-terminal-2.26.2.ebuild:
+  Bump to 2.26.2. Translation updates.
 
 *gnome-terminal-2.26.1 (04 May 2009)
 
